
Krzywinski M, Birol I, Jones S, Marra M (2011). Hive Plots - Rational
Approach to Visualizing Networks. Briefings in Bioinformatics.
bib.oxfordjournals.org/content/early/2011/12/09/bib.bbr069.abstract
doi: 10.1093/bib/bbr069

Bryan A. Hanson DePauw University, Greencastle Indiana USA

See below for various contributors and those that reported bugs.  Much appreciated!

###### Version: 0.2-12
Date: 2013-07-??
News:
>> Vesna Memisevic discovered that adj2HPD assumed bipartite networks in how it processed the data.  Modified the code so that this assumption is not made and other types of adjacency matrices can be read.
>> Updated documentation and related files.

###### Version: 0.2-11
Date: 2013-07-06
News:
>> Modified dot2HPD to handle multiple tag=value entries.
>> Small clarifications to documentation.

###### Version: 0.2-10
Date: 2013-02-29
News:
>> Added tcltk to dependencies and some importFrom in NAMESPACE to pass CRAN.

###### Version: 0.2-9
Date: 2013-02-29
News:
>> Removed dependency on RFOC due to licensing issue there.

###### Version: 0.2-8
Date: 2013-02-29
News:
>> Compatible with R 3.0.0
>> Fixed some documentation problems and tuned up github site.
>> NULL value for edge.inst in dot2HPD was not being caught (thanks to Gordon Robertson for pointing this out).

###### Version: 0.2-7
Date: 5 Oct 2012
News:
>> Cleaned up a few non-code issues to pass CRAN checks. 

###### Version: 0.2-6
Date: 3 Oct 2012
News:
>> Fixed a problem with edge sizes and weights not being handled correctly for some cases with plotHive (so 2D hives only). 

###### Version: 0.2-5
Date: 16 Sept 2012
News:
>> Fixed a problem in which 2D hive node sizes and colors were not being drawn correctly.  Reported by Augustin Arce along with a suggested fix.  Thanks Augustin!  The same problem was in the 3D version and was also corrected.  The edge colors and weights do not appear to have the problem; they are assembled from scratch.

###### Version: 0.2-4
Date: 25 June 2012
News: