@@ -1,8 +1,8 @@
 Package: HiveR
 Type: Package
 Title: 2D and 3D Hive Plots for R
-Version: 0.2-11
-Date: 2013-07-06
+Version: 0.2-12
+Date: 2013-07-22
 Authors@R:	c(person("Bryan", "Hanson", role = c("aut", "cre"), email = "hanson@depauw.edu"),
 		person("Vena", "Memisevic", role = "ctb"),
 		person("Jonathan", "Chung", role = "ctb"))
@@ -11,7 +11,7 @@ Description: HiveR is an R package for creating and plotting 2D and 3D hive plot
 License: GPL-3
 Imports: grid, RColorBrewer, rgl, xtable, bipartite, sna, tkrgl,
         plyr, tcltk
-Suggests: mvbutils, FuncMap, lattice, reshape
+Suggests: mvbutils, FuncMap, lattice, reshape, ppiData
 URL: http://academic.depauw.edu/~hanson/HiveR/HiveR.html
 ByteCompile: TRUE
 Packaged: 2012-10-03 22:01:22 UTC; bryanhanson
